<resources>
    <string name="app_name">Notes</string>

    <string name="add_note">Add note</string>
    <string name="delete_note">Note deleted successfully.</string>
    <string name="error">An error occurred.</string>
    <string name="save_document_error">Document could not be saved</string>
    <string name="share_document_error">Document could not be shared</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="detailed_description">Add a more detailed description</string>
    <string name="reminder">Do you want to set a reminder?</string>
    <string name="date_time">dd/mm/yyyy hh:mm:ss</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="field_validation">Title and description can not be empty.</string>
    <string name="time_validation">Please, set date and time</string>

    <string name="save_as_pdf">Save as PDF</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>

    <string name="stop">Stop</string>
</resources>